--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,12 +1,24 @@
-* {
-	outline: 0;
-	font-family: sans-serif;
-}
-body {
-	background-color: #fafafa;
-	font-size: 40px;
+.site {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.activeLi {
-	color: red;
+.block {
+	width: 100%;
+	max-width: 600px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	padding: 100px 50px;
+	background: #e7e7e7;
+}
+
+#myButton {
+}
+
+#myInput {
+	display: none;
 }
