--- a/src/index.pug
+++ b/src/index.pug
@@ -11,18 +11,7 @@ html(lang="en")
       #block.block(tabindex="0")
         button#myButton.btn.btn-secondary Выберите значение
         input#myInput.form-control(type="text" value="Введите текст")
-      //- #block2.block(tabindex="0")
-
-          
-
-    
-
-
-      
-      
-
-    
-
+        #list
 
   
   script(src="assets/js/vendors.js")
