--- a/src/index.pug
+++ b/src/index.pug
@@ -11,7 +11,8 @@ html(lang="en")
       #block.block(tabindex="0")
         button#myButton.btn.btn-secondary Выберите значение
         input#myInput.form-control(type="text" value="Введите текст")
-        #list
+        .list__outer
+          #list
 
   
   script(src="assets/js/vendors.js")
