--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -14,6 +14,7 @@
 	flex-direction: column;
 	padding: 100px 50px;
 	background: #e7e7e7;
+	position: relative;
 }
 
 #myButton {
@@ -21,4 +22,36 @@
 
 #myInput {
 	display: none;
+}
+
+.list__outer {
+	position: relative;
+}
+
+#list {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 256px;
+	height: auto;
+	max-height: 240px;
+	margin: 2px auto;
+	background: white;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+.list {
+	width: 100%;
+	height: 48px;
+	padding: 0 8px 0 16px;
+	box-shadow: 0 -1px rgba(0, 0, 0, 0.1) inset;
+	line-height: 48px;
+	overflow: hidden;
+	cursor: pointer;
+}
+.list:hover {
+	background: rgba(0, 0, 0, 0.05);
+	box-shadow: 0 -1px rgba(0, 0, 0, 0.15) inset;
 }
