--- a/src/assets/css/sis.css
+++ b/src/assets/css/sis.css
@@ -1,54 +1,38 @@
-div,
-input {
-	/* normalize css */
-	padding: 0;
-	margin: 0;
+.site {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.block {
+	width: 100%;
+	max-width: 600px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	padding: 100px 50px;
+	background: #e7e7e7;
+	position: relative;
+}
+#container {
+	border: 0px solid red;
+	position: relative;
+	width: 400px;
+	height: 200px;
+}
+#search_field {
+	display: none;
+}
+
+.list__outer {
+	position: relative;
+}
+
+#select_list {
+	position: absolute;
 	top: 0;
 	left: 0;
-	border: none;
-	font-family: Arial;
-	font-size: 14px;
-	line-height: 0;
-	color: rgba(0, 0, 0, 0.75);
-	box-sizing: border-box;
-}
-
-.body {
-	margin: 300px auto 0;
-	width: 258px;
-	height: 50px;
-	padding: 1px;
-	/**/
-	box-shadow: 1px 0 rgba(0, 0, 0, 0.15), 0 1px rgba(0, 0, 0, 0.15), -1px 0 rgba(0, 0, 0, 0.15),
-		0 -1px rgba(0, 0, 0, 0.15);
-	border-radius: 2px; /* не работает с border и outline */
-}
-
-input {
-	width: 208px;
-	height: 48px;
-	padding-left: 16px;
-}
-
-.array {
-	width: 48px;
-	height: 48px;
-	float: right;
-	text-align: center;
-	line-height: 48px;
-	background: rgba(255, 255, 255, 0.9);
-	color: rgba(0, 0, 0, 0.5);
-	box-shadow: 1px 0 rgba(0, 0, 0, 0.1) inset;
-	cursor: pointer;
-}
-.array:hover {
-	background: rgba(255, 255, 255, 0.5);
-	color: inherit;
-}
-
-/**/
-
-#list {
 	width: 256px;
 	height: auto;
 	max-height: 240px;
@@ -58,22 +42,16 @@ input {
 	overflow-x: hidden;
 	overflow-y: auto;
 }
-
-.list {
-	width: 100%;
-	height: 48px;
-	padding: 0 8px 0 16px;
-	box-shadow: 0 -1px rgba(0, 0, 0, 0.1) inset;
-	line-height: 48px;
-	overflow: hidden;
+#select_list li {
+	border-top: 1px dotted #cccccc;
+	height: 25px;
+	font: 17px "Times New Roman";
+	list-style: none;
+}
+#select_list li:hover {
 	cursor: pointer;
+	background: #fef6d7 !important;
 }
-.list:hover {
-	background: rgba(0, 0, 0, 0.05);
-	box-shadow: 0 -1px rgba(0, 0, 0, 0.15) inset;
-}
-
-/* скроем стандартную стрелку */
-input::-webkit-calendar-picker-indicator {
-	display: none;
+#select_list li:first-child {
+	border: none;
 }
