--- a/src/index1.pug
+++ b/src/index1.pug
@@ -10,7 +10,7 @@ html(lang="en")
     .site
       #block.block(tabindex="0")
         button#myButton.btn.btn-secondary Выберите значение
-        input#myInput.form-control(type="text" value="Введите текст" tabindex="1")
+        input#myInput.form-control(type="text" value="Введите текст")
         .list__outer
           #list
 
