--- a/src/assets/css/main2.css
+++ b/src/assets/css/main2.css
@@ -26,14 +26,13 @@
 
 .list__outer {
 	position: relative;
-	padding: 0 2px;
 }
 
 #list {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
+	width: 256px;
 	height: auto;
 	max-height: 240px;
 	margin: 2px auto;
@@ -41,7 +40,6 @@
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	overflow-x: hidden;
 	overflow-y: auto;
-	display: none;
 }
 
 .list {
@@ -53,8 +51,7 @@
 	overflow: hidden;
 	cursor: pointer;
 }
-.list:focus {
+.list:hover {
 	background: rgba(0, 0, 0, 0.05);
 	box-shadow: 0 -1px rgba(0, 0, 0, 0.15) inset;
-	outline: none;
 }
