--- a/src/index2.pug
+++ b/src/index2.pug
@@ -8,9 +8,9 @@ html(lang="en")
     link(rel="stylesheet", href="assets/css/apps.css")
   body 
     .site
-      #block.block
-        button#myButton.btn.btn-secondary.mb-3(tabindex="1") Выберите значение
-        input#myInput.form-control(type="text" value="Введите текст" tabindex="2")
+      #block.block(tabindex="0")
+        button#myButton.btn.btn-secondary Выберите значение
+        input#myInput.form-control(type="text" value="Введите текст" tabindex="1")
         .list__outer
           #list
 
