--- a/src/index.pug
+++ b/src/index.pug
@@ -13,6 +13,7 @@ html(lang="en")
         input#myInput.form-control(type="text" value="Введите текст" tabindex="2")
         .list__outer
           #list
+        input
 
   
   script(src="assets/js/vendors.js")
