--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 }
 
 .block {
@@ -42,6 +43,7 @@
 	overflow-x: hidden;
 	overflow-y: auto;
 	display: none;
+	z-index: 10;
 }
 
 .list {
