--- a/src/index.pug
+++ b/src/index.pug
@@ -15,7 +15,7 @@ html(lang="en")
           #list
         //- input
       #block.block
-        button.btn.btn-secondary(tabindex="1") Кнопка
+        button.btn.btn-secondary Другая кнопка
         
 
   
